{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 670,
  "lineage": "41fb2efe-c563-d5a6-fe0c-f9b193b84d8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0379943560c071d28",
            "association_id": "eipassoc-0358552ee84849e2a",
            "domain": "vpc",
            "id": "eipalloc-0379943560c071d28",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-001adf236fcbc90d1",
            "private_dns": "ip-10-0-1-210.ap-south-1.compute.internal",
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-15-207-243-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.243.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mahiEIPinternal"
            },
            "tags_all": {
              "Name": "mahiEIPinternal"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:internet-gateway/igw-02e1af1ffb5e62db5",
            "id": "igw-02e1af1ffb5e62db5",
            "owner_id": "061280019180",
            "tags": {
              "Name": "mahiinternalIGW"
            },
            "tags_all": {
              "Name": "mahiinternalIGW"
            },
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/3ac5a88ddc6e735b",
            "arn_suffix": "app/mahiAlbinternal/3ac5a88ddc6e735b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mahiAlbinternal-547067601.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/3ac5a88ddc6e735b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mahiAlbinternal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0934e2cbc2edf30fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080b52312ee01120e"
              },
              {
                "subnet_id": "subnet-0970ad4f3da29216a"
              }
            ],
            "subnets": [
              "subnet-080b52312ee01120e",
              "subnet-0970ad4f3da29216a"
            ],
            "tags": {
              "Environment": "mahiAlbinternal"
            },
            "tags_all": {
              "Environment": "mahiAlbinternal"
            },
            "vpc_id": "vpc-074434a6c33586244",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:listener/app/mahiAlbinternal/3ac5a88ddc6e735b/eb2e89ae3156477e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:listener/app/mahiAlbinternal/3ac5a88ddc6e735b/eb2e89ae3156477e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:loadbalancer/app/mahiAlbinternal/3ac5a88ddc6e735b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:targetgroup/mahi-target-group/4926a0628c80e06b",
            "arn_suffix": "targetgroup/mahi-target-group/4926a0628c80e06b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:061280019180:targetgroup/mahi-target-group/4926a0628c80e06b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mahi-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0379943560c071d28",
            "connectivity_type": "public",
            "id": "nat-00a7c1c348721e7a2",
            "network_interface_id": "eni-001adf236fcbc90d1",
            "private_ip": "10.0.1.210",
            "public_ip": "15.207.243.208",
            "subnet_id": "subnet-0970ad4f3da29216a",
            "tags": {
              "Name": "NATmahiinternal"
            },
            "tags_all": {
              "Name": "NATmahiinternal"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:route-table/rtb-00b11a596671c940c",
            "id": "rtb-00b11a596671c940c",
            "owner_id": "061280019180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00a7c1c348721e7a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routeprivatemahiinternal"
            },
            "tags_all": {
              "Name": "Routeprivatemahiinternal"
            },
            "timeouts": null,
            "vpc_id": "vpc-074434a6c33586244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:route-table/rtb-064ea8e728dbdb523",
            "id": "rtb-064ea8e728dbdb523",
            "owner_id": "061280019180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e1af1ffb5e62db5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mahiPublicRoute"
            },
            "tags_all": {
              "Name": "mahiPublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-074434a6c33586244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c9b9e9612e1c05",
            "route_table_id": "rtb-00b11a596671c940c",
            "subnet_id": "subnet-0f4278a2dca0773fc"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05997ff56ec4efed6",
            "route_table_id": "rtb-00b11a596671c940c",
            "subnet_id": "subnet-0d80d98cbb1c043c5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cbe385ee753e9d0",
            "route_table_id": "rtb-064ea8e728dbdb523",
            "subnet_id": "subnet-0970ad4f3da29216a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b346aa215b6b58c",
            "route_table_id": "rtb-064ea8e728dbdb523",
            "subnet_id": "subnet-080b52312ee01120e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0cd2688894cbe062c",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd2688894cbe062c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0934e2cbc2edf30fc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074434a6c33586244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:security-group/sg-0934e2cbc2edf30fc",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0934e2cbc2edf30fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internalmahi-sg",
            "name_prefix": "",
            "owner_id": "061280019180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internalmahi-sg"
            },
            "tags_all": {
              "Name": "internalmahi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074434a6c33586244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0f4278a2dca0773fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4278a2dca0773fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privatemahiinternal-0"
            },
            "tags_all": {
              "Name": "Privatemahiinternal-0"
            },
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0d80d98cbb1c043c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80d98cbb1c043c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privatemahiinternal-1"
            },
            "tags_all": {
              "Name": "Privatemahiinternal-1"
            },
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-0970ad4f3da29216a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0970ad4f3da29216a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Publicmahiinternal-0"
            },
            "tags_all": {
              "Name": "Publicmahiinternal-0"
            },
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:subnet/subnet-080b52312ee01120e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b52312ee01120e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061280019180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Publicmahiinternal-1"
            },
            "tags_all": {
              "Name": "Publicmahiinternal-1"
            },
            "vpc_id": "vpc-074434a6c33586244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:061280019180:vpc/vpc-074434a6c33586244",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0846123d87275b031",
            "default_route_table_id": "rtb-0ba901dfa8de1dd38",
            "default_security_group_id": "sg-0cf2fc75b9e4a7607",
            "dhcp_options_id": "dopt-0de6b8c89f1565f94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074434a6c33586244",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba901dfa8de1dd38",
            "owner_id": "061280019180",
            "tags": {
              "Name": "mahiinternalVPC"
            },
            "tags_all": {
              "Name": "mahiinternalVPC"
            }
          }
        }
      ]
    }
  ]
}